-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.9.0
-
3
-
9223372036854775807
sanity:156 test failed in rhel7 plataform for writecache disable
and readcache enabled.
12288 bytes (12 kB) copied, 0.00750388 s, 1.6 MB/s
cache hits:: before: 4142, after: 4142
Read again; it should be satisfied from the cache.
sanity test_156: @@@@@@ FAIL: NOT IN CACHE: before: 4142, after: 4142
Trace dump:
= /usr/lib64/lustre/tests/test-framework.sh:4730:error_noexit()
= /usr/lib64/lustre/tests/test-framework.sh:4761:error()
= /usr/lib64/lustre/tests/sanity.sh:10271:test_156()
= /usr/lib64/lustre/tests/test-framework.sh:5008:run_one()
= /usr/lib64/lustre/tests/test-framework.sh:5045:run_one_logged()
= /usr/lib64/lustre/tests/test-framework.sh:4910:run_test()
= /usr/lib64/lustre/tests/sanity.sh:10278:main()
- is related to
-
LU-8056 Support for linux 4.5 kernels
-
- Resolved
-