lustre/llite/lloop.c
@@ -226,7 +226,7 @@ static int do_bio_lustrebacked(struct lloop_device *lo, struct bio *head)
 
 #ifdef HAVE_BVEC_ITER
 		offset = (pgoff_t)(bio->bi_iter.bi_sector << 9) + lo->lo_offset;
-		bio_for_each_segment(bvec, bio, iter) {
+		bio_for_each_segment_all(bvec, bio, iter) {
 			BUG_ON(bvec.bv_offset != 0);
 			BUG_ON(bvec.bv_len != PAGE_CACHE_SIZE);
 
@@ -236,7 +236,7 @@ static int do_bio_lustrebacked(struct lloop_device *lo, struct bio *head)
 			offset += bvec.bv_len;
 #else
 		offset = (pgoff_t)(bio->bi_sector << 9) + lo->lo_offset;
-		bio_for_each_segment(bvec, bio, iter) {
+		bio_for_each_segment_all(bvec, bio, iter) {
 			BUG_ON(bvec->bv_offset != 0);
 			BUG_ON(bvec->bv_len != PAGE_CACHE_SIZE);
 
